going down the rabbit hole of trying to vectorize coalescence

--- a/rosindell2010Algos.Rmd
+++ b/rosindell2010Algos.Rmd
@@ -9,9 +9,13 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-These algorithms come from Appendix 1 of Rosindell *et al.* (2010) *Ecology Letters* 13: 716--727.
+Here I first re-construct the algorithms of Rosindell *et al.* (2010) *Ecology Letters* 13: 716--727 and then search for more efficient vectorized representations using known properties of the coalescent.
 
-## Point-mutation speciation in the metacommunity
+## Rosindell algorithms
+
+These algorithms come from Appendix 1 of Rosindell *et al.* (2010).
+
+### Point-mutation speciation in the metacommunity
 
 ```{r, fig.width=3, fig.height=3, cache=TRUE}
 # function to simulate meta community abundance under 
@@ -59,7 +63,7 @@ plot(sort(x, TRUE), log = 'y', xlab = 'Species rank', ylab = 'Abundance')
 ```
 
 
-## Protracted speciation in the metacommunity
+### Protracted speciation in the metacommunity
 
 ```{r, fig.width=3, fig.height=3, cache=TRUE}
 # function to simulate meta community abundance under 
@@ -115,4 +119,27 @@ x <- protractMeta(100, 10^4, 2)
 
 par(mar = c(3, 3, 0, 0) + 0.5, mgp = c(1.5, 0.5, 0))
 plot(sort(x, TRUE), log = 'y', xlab = 'Species rank', ylab = 'Abundance')
+```
+
+
+## Vectorized coalescent
+
+We need the tree topology and branch lengths as well.  While we could easily get the topology from the above algorithms (recording the parent of each time `V[i]` merges with `V[j]` until speciation) the branch lengths would require a little more math---something for Rampal and James, not I! Additionally, in *R* these algorithms are slow for large $J$, though implementing them in *C++* would obviously be efficient. More direcetly simulating a coalescent process and then "sprinkling" (by a Poisson process) speciation events on that coalescent would give us everything we wanted.
+
+The sojourn time in generations of $k$ lineages coalescing to $k - 1$ lineages is $\tau \sim exp\left\{\binom{k}{2}\right\}$. So we can simulate the coalescent this way
+
+```{r}
+J <- 10^3 # number of individuals
+lambda <- 10 # point mutation speciation rate in generations
+
+coalSoj <- rexp(J - 1, choose(J:2, 2)) # vector of sojourn times
+
+# speciation happens according to a Poisson process, so we need
+# to have a random number of speciation events, and place them
+# uniformly randomly across all branches of the coalescent tree
+nSpeciate <- rpois(1, lambda * sum(coalSoj * J:2)) # number of events
+
+# ID of the sojourn times in which speciation occurs
+sSpeciate <- sample(paste(rep((J-1):1, J:2), 1:sum(2:J), sep = '-'), 
+                    nSpeciate, replace = TRUE, prob = rep(coalSoj, J:2))
 ```
